@@ -400,28 +400,24 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-failsafe-plugin_version}</version>
-				<configuration>
-					<useSystemClassLoader>true</useSystemClassLoader>
-					<forkMode>once</forkMode>
-					<argLine>${argline}</argLine>
-					<systemProperties>
-						<!-- server side -->
-						<property>
-							<name>port</name>
-							<value>${port}</value>
-						</property>
-						<!-- client side -->
-						<property>
-							<name>server</name>
-							<value>${server}</value>
-						</property>
-						<property>
-							<name>timeout</name>
-							<value>${timeout}</value>
-						</property>
-					</systemProperties>
-				</configuration>
+                <version>${maven-surefire-plugin_version}</version>
+	            <executions>
+	              <execution>
+	                <id>default-test</id>
+	                <phase>test</phase>
+	                <goals>
+	                  <goal>test</goal>
+	                </goals>
+	                <configuration>
+	                    <argLine>${surefireArgLine}</argLine>
+	                    <useSystemClassLoader>true</useSystemClassLoader>
+						<forkMode>once</forkMode>
+	                </configuration>
+	              </execution>
+	            </executions>
+		        <configuration>
+		              <argLine>-XX:MaxPermSize=512m</argLine>
+		        </configuration>	            
 			</plugin>
            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -526,20 +522,36 @@
 				    <groupId>org.jacoco</groupId>
 				    <artifactId>jacoco-maven-plugin</artifactId>
 				    <version>${maven_jacoco_plugin_version}</version>
-	                <executions>
-						<execution>
-						<id>default-prepare-agent</id>
-						<goals>
-						   <goal>prepare-agent</goal>
-						</goals>
-						</execution>
-						<execution>
-							<id>default-report</id>
-							<phase>prepare-package</phase>
-							<goals>
-							<goal>report</goal></goals>
-						</execution>
-	                </executions>
+		            <executions>
+		              <!-- pre-unit-test execution helps setting up some maven property,
+		                which will be used later by JaCoCo -->
+		              <execution>
+		                <id>pre-unit-test</id>
+		                <goals>
+		                  <goal>prepare-agent</goal>
+		                </goals>
+		                <configuration>
+		                  <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+		                  <!-- passing property which will contains settings for JaCoCo agent.
+		                    If not specified, then "argLine" would be used for "jar" packaging -->
+		                  <propertyName>surefireArgLine</propertyName>
+		                </configuration>		       
+		              </execution>
+		              <!-- report phase setup -->
+		              <execution>
+		                <id>post-unit-test</id>
+		                <phase>test</phase>
+		                <goals>
+		                  <goal>report</goal>
+		                </goals>
+		                <configuration>
+		                  <!-- output file with report data. -->
+		                  <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+		                  <!-- output directory for the reports. -->
+		                  <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+		                </configuration>
+		              </execution>
+		            </executions>
 				</plugin>
 				<!--<plugin>
 				    <groupId>org.codehaus.mojo</groupId>
